/*
 * Copyright 2020 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_package = "com.android.adsdk.model";
option java_multiple_files = false;

message StoredSdkConfig {
  // filter for showing / hiding completed tasks
  string customerId = 1;
  string partnerId = 2;
  string domainName = 3;
  string countryCode = 4;
  int64 auctionTimeOutMillis = 5;
  string dummyCrId = 6;
  int64 configExpiryMillis = 7;
  int32 projectEventPercentage = 8;
  int32 opportunityEventPercentage = 9;
  bool shouldKillSDK = 10;
  string bidRequestUrl = 11;
  string projectEventUrl = 12;
  string opportunityEventUrl = 13;
  string sdkVersion = 14;
  map<string, string> dpfToCrIdMap = 15;
  int64 timeStamp = 16;
  string osVersion = 17;
  string prebidVersion = 18;
  bool isSubjectToGDPR = 19;
}
